fix: improving link contrast to background

--- a/local.css
+++ b/local.css
@@ -14,7 +14,9 @@ h2{
 img{
   width: 100%;
 }
-
+a{
+  color:#002BFF;
+}
 .lead{
   width: 50%;
   text-align: center;
